# rumi

./: .pypirc  DESCRIPTION.md  Dockerfile  README.md  action.yaml  reader.py  setup.cfg  setup.py
.github/workflows/: example_file_rumi_action.yaml  pytest.yaml  test.yaml
requirements/: requirements.txt
rumi/: __init__.py  action.py  base_reader.py  cache.py  reader.py  reporter.py  version.py
rumi/file_rumi/: __init__.py  reader.py  reporter.py  version.py
rumi/file_rumi/action/: Dockerfile  action.py  action.yaml
rumi/msg_rumi/: __init__.py  reader.py  reporter.py
rumi/react/: action.py
rumi/rumi-hugo/: __init__.py  reader.py  reporter.py  version.py
rumi/rumi-react/: reporter.py
test/fixtures/: ja_translated_test.txt
tests/: __init__.py  test_base_reader.py  test_cache.py  test_version.py
tests/test_file_rumi/: __init__.py  conftest.py  test_reader.py  test_reporter.py
tests/test_msg_rumi/: __init__.py  conftest.py  test_reader.py  test_reporter.py
