[metadata]
description_file = README.md
license_file = LICENSE

[test]
local_freetype = True
tests = True

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
python_files = tests/*

[options.data_files]
. = requirements/requirements.txt

[flake8]
# match black maximum line length
max-line-length = 88
per-file-ignores =
    __init__.py:F401
    test_*.py:F405,F403
    conftest.py:F841