[metadata]
description_file = README.md
license_file = LICENSE

[test]
local_freetype = True
tests = True

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
python_files = tests/*

[options.data_files]
. = requirements/requirements.txt

[flake8]
# match black maximum line length
max-line-length = 88
per-file-ignores =
    # Ignore error F401: module imported but unused
    __init__.py:F401
    
    # Ignore error F405: name may be undefined, or defined from star imports
    # Ignore error F403: 'from module import *' used; unable to detect undefined names
    test_*.py:F405,F403
    
    # Ignore error F841: local variable name is assigned to but never used
    conftest.py:F841